@@ -59,6 +59,13 @@
             <artifactId>temporal-sdk</artifactId>
             <version>${temporal-sdk-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.palantir.javapoet</groupId>
+            <artifactId>javapoet</artifactId>
+            <version>0.11.0</version>
+            <scope>compile</scope>
+        </dependency>
         <!--
         Redisson is needed for RedisBlockingQueue. Redisson is pulling netty.
         It overrides netty 4.1.49 from datashare-index and avoid blocking Redis tests
@@ -91,6 +98,12 @@
             <groupId>org.icij.datashare</groupId>
             <artifactId>commons-test</artifactId>
             <version>${project.parent.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.testing.compile</groupId>
+            <artifactId>compile-testing</artifactId>
+            <version>0.23.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -145,7 +158,18 @@
                                 <include>TaskManagerAmqpTest</include>
                             </includes>
                             <runOrder>alphabetical</runOrder>
-                            <argLine>-Djava.awt.headless=true --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
+                            <argLine>-Djava.awt.headless=true
+                                --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+                                --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </execution>
@@ -161,7 +185,18 @@
                                 <exclude>JacksonSubTypesTest</exclude>
                                 <exclude>TaskManagerAmqpTest</exclude>
                             </excludes>
-                            <argLine>-Djava.awt.headless=true --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
+                            <argLine>-Djava.awt.headless=true
+                                --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                                --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+                                --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </execution>
